# learn-opengl

./: .clang-format  CMakeLists.txt  README.md
common/include/: gl_intellisense.h  misc.h  shader.h
common/include/glad/: glad.h
common/src/: glad.c
projects/001-create-a-window/: main.cpp
projects/002-hello-triangle/: main.cpp
projects/002.1-rectangle-element/: main.cpp
projects/003-hello-rectangle/: main.cpp
projects/003-hello-shaders/: main.cpp  spinning_red_black.vs
projects/004-hello-textures/: main.cpp  square.fs  square.vs
projects/005-transformations/: main.cpp  square.vs
projects/exercise-002-01/: main.cpp
projects/exercise-002-02/: main.cpp
projects/exercise-002-03/: main.cpp
